src/content/docs/ja/sdk/unity/v4/features/attribution.mdx
---
title: "アトリビューション情報の取得"
description: "Adjust SDKを使ってアトリビューションの変更を受信します。"
slug: "en/sdk/unity/v4/features/attribution"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/unity/features/attribution"
---
ユーザーがAdjustリンクをクリックすると、そのアトリビューション情報が更新されます。これは、ユーザーが[ディープリンク](https://help.adjust.com/en/article/deep-links)をクリックした場合に発生します。ユーザーのアトリビューションについての情報は、`AdjustAttribution`クラスに表示されます。

AdjustAttributionクラスのプロパティ \{\#adjustattribution\-class\-properties\}
--------------------------------------------------------------------------

`AdjustAttribution`クラスには、デバイスの現在のアトリビューションステータスに関する詳細が含まれています。ユーザーの入力されていない値は全て`null`値として返されます。
<callout type="note"> 

以下の値は、[`AdjustConfig`インスタンスの`needsCost`プロパティ](/en/sdk/android/configuration#enable-cost-data-sending)が`true`になっている場合にのみアクセスできます：

* `costType`
* `costAmount`
* `costCurrency`

</Callout> 

|          値          |  データタイプ  |                                                  説明                                                  |
|---------------------|----------|------------------------------------------------------------------------------------------------------|
| `trackerToken`      | `string` | デバイスが現在アトリビュートされているリンクのトークン                                                                          |
| `trackerName`       | `string` | デバイスが現在アトリビュートされているリンクの名前                                                                            |
| `network`           | `string` | デバイスが現在アトリビュートされているネットワークの名前                                                                         |
| `campaign`          | `string` | デバイスが現在アトリビュートされているキャンペーンの名前                                                                         |
| `adgroup`           | `string` | デバイスが現在アトリビュートされているアドグループの名前                                                                         |
| `creative`          | `string` | デバイスが現在アトリビュートされているクリエイティブの名前                                                                        |
| `clickLabel`        | `string` | インストールがタグされている[クリックラベル](https://help.adjust.com/en/article/user-rewards)                             |
| `adid`              | `string` | デバイスに割り当てられた一意のAdjust ID                                                                             |
| `costType`          | `string` | キャンペーン価格モデル（例：cpi）                                                                                   |
| `costAmount`        | `double` | インストールのコスト                                                                                           |
| `costCurrency`      | `string` | コストに関連する[3文字のISO 4217通貨コード](https://www.iban.com/currency-codes)                                     |
| `fbInstallReferrer` | `string` | [Facebookインストールリファラー](https://developers.facebook.com/docs/app-ads/install-referrer/)。 *Androidのみ* 。 |

アトリビューションが変更されたときに関数をトリガーする \{\#trigger\-a\-function\-when\-attribution\-changes\}
------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public void setAttributionChangedDelegate(Action<adjustattribution id="sl-md0000000"> attributionChangedDelegate, string sceneName = "Adjust");
```

</CodeBlock> 

SDKはアトリビューションの変更を受信し、更新を検出したときに関数を呼び出すことができます。コールバック関数を設定するには、関数名を引数として`setAttributionChangedDelegate`メソッドを呼び出します。
<callout type="important"> 

アプリ内でAdjust SDKを初期化する **前** に、`setAttributionChangedDelegate`メソッドを呼び出す必要があります。
</Callout> <codeblock highlight="{range: 8}, {range: 13-16}"> 

```cs
using com.adjust.sdk;

public class ExampleGUI : MonoBehaviour {
   void OnGUI() {
      if (GUI.Button(new Rect(0, 0, Screen.width, Screen.height), "callback")) {
         AdjustConfig adjustConfig = new AdjustConfig("{Your App Token}", AdjustEnvironmentSandbox);
         adjustConfig.setLogLevel(AdjustLogLevel.Verbose);
         adjustConfig.setAttributionChangedDelegate(this.attributionChangedDelegate);
         Adjust.start(adjustConfig);
      }
   }

   public void attributionChangedDelegate(AdjustAttribution attribution) {
      Debug.Log("Attribution changed");
      // ...
   }
}
```

</CodeBlock> 

現在のアトリビューション情報を取得する \{\#get\-current\-attribution\-information\}
----------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public static AdjustAttribution getAttribution();
```

</CodeBlock> 

ユーザーがアプリをインストールすると、Adjustはそのインストールをキャンペーンにアトリビュートします。Adjust SDKを実装することで、インストールのキャンペーンアトリビューションの詳細にアクセスすることが可能です。この情報を返すには、`getAttribution`メソッドを呼び出して、アトリビューション情報を`AdjustAttribution`オブジェクトとして返します。

```cs
var attribution = Adjust.getAttribution();
```

