src/content/docs/ja/sdk/unity/v5/features/attribution.mdx
---
title: "アトリビューション情報の取得"
description: "Adjust SDKを使ってアトリビューションの変更を受信します。"
slug: "en/sdk/unity/features/attribution"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/unity/v4/features/attribution"
---
ユーザーがAdjustリンクをクリックすると、そのアトリビューション情報が更新されます。これは、ユーザーが[ディープリンク](https://help.adjust.com/en/article/deep-links)をクリックした場合に発生します。ユーザーのアトリビューションについての情報は、`AdjustAttribution`クラスに表示されます。

AdjustAttributionクラスのプロパティ \{\#adjustattribution\-class\-properties\}
--------------------------------------------------------------------------

`AdjustAttribution`クラスには、デバイスの現在のアトリビューションステータスに関する詳細が含まれています。ユーザーの入力されていない値は全て`null`値として返されます。
<callout type="note"> 

以下の値は、[`AdjustConfig`インスタンスの`IsCostDataInAttributionEnabled`プロパティ](/en/sdk/android/configuration#enable-cost-data-sending)が`true`になっている場合にのみアクセスできます：

* `costType`
* `costAmount`
* `costCurrency`

</Callout> <callout type="tip"> 

AdjustのデバイスIDを取得するには、`Adjust.getAdid`メソッドを使用してください。詳細については、[デバイス情報の取得](/en/sdk/android/features/device-info#adjust-device-identifier)をご覧ください。
</Callout> 

|          値          |  データタイプ  |                                                  説明                                                  |
|---------------------|----------|------------------------------------------------------------------------------------------------------|
| `trackerToken`      | `string` | デバイスが現在アトリビュートされているリンクのトークン                                                                          |
| `trackerName`       | `string` | デバイスが現在アトリビュートされているリンクの名前                                                                            |
| `network`           | `string` | デバイスが現在アトリビュートされているネットワークの名前                                                                         |
| `campaign`          | `string` | デバイスが現在アトリビュートされているキャンペーンの名前                                                                         |
| `adgroup`           | `string` | デバイスが現在アトリビュートされているアドグループの名前                                                                         |
| `creative`          | `string` | デバイスが現在アトリビュートされているクリエイティブの名前                                                                        |
| `clickLabel`        | `string` | インストールがタグされている[クリックラベル](https://help.adjust.com/en/article/user-rewards)                             |
| `costType`          | `string` | キャンペーン価格モデル（例：cpi）                                                                                   |
| `costAmount`        | `double` | インストールのコスト                                                                                           |
| `costCurrency`      | `string` | コストに関連する[3文字のISO 4217通貨コード](https://www.iban.com/currency-codes)                                     |
| `fbInstallReferrer` | `string` | [Facebookインストールリファラー](https://developers.facebook.com/docs/app-ads/install-referrer/)。 *Androidのみ* 。 |

アトリビューションが変更されたときに関数をトリガーする \{\#trigger\-a\-function\-when\-attribution\-changes\}
------------------------------------------------------------------------------------------

<codeblock title="プロパティ宣言"> 

```cs
public Action<adjustattribution id="sl-md0000000"> AttributionChangedDelegate { get; set; }
```

</CodeBlock> 

SDKはアトリビューションの変更を受信し、更新を検出したときに関数を呼び出すことができます。コールバック関数を設定するには、`AdjustConfig`インスタンスの`AttributionChangedDelegate`プロパティに関数を割り当てます。
<callout type="important"> 

アプリ内でAdjust SDKを初期化する **前** に、このプロパティを呼び出す必要があります。
</Callout> <codeblock highlight="{range: 8}, {range: 13-16}"> 

```cs
using com.adjust.sdk;

public class ExampleGUI : MonoBehaviour {
   void OnGUI() {
      if (GUI.Button(new Rect(0, 0, Screen.width, Screen.height), "callback")) {
         AdjustConfig adjustConfig = new AdjustConfig("{Your App Token}", AdjustEnvironmentSandbox);
         adjustConfig.LogLevel = AdjustLogLevel.Verbose;
         adjustConfig.AttributionChangedDelegate = this.AttributionChangedDelegate;
         Adjust.InitSdk(adjustConfig);
      }
   }

   public void AttributionChangedDelegate(AdjustAttribution attribution) {
      Debug.Log("Attribution changed");
      // ...
   }
}
```

</CodeBlock> 

現在のアトリビューション情報を取得する \{\#get\-current\-attribution\-information\}
----------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public static void GetAttribution(Action<adjustattribution id="sl-md0000000"> callback)
```

</CodeBlock> 

ユーザーがアプリをインストールすると、Adjustはそのインストールをキャンペーンにアトリビュートします。Adjust SDKでは、インストールのキャンペーンアトリビューションの詳細にアクセスすることができます。この情報を返すには、`Adjust.GetAttribution`メソッドを呼び出し、コールバック関数をパスしてください。SDKはアトリビューション情報を非同期的に取得し、これを`AdjustAttribution`オブジェクトとして完了ハンドラーにパスします。

```cs
Adjust.GetAttribution(attribution =>
{
    // use attribution
});
```

